monitor/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana

spec:
  replicas: 0
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 472
        runAsGroup: 472
        runAsNonRoot: true
        runAsUser: 472
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - c1-203.tokyotech.org
              weight: 1
      tolerations:
        - key: monitor-node
          operator: Equal
          value: "true"
          effect: NoSchedule

      volumes:
        - name: data
          hostPath:
            path: /srv/grafana/data
        - name: config
          configMap:
            name: grafana

      containers:
        - name: grafana
          image: grafana/grafana:13.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: data
            - mountPath: /etc/grafana/grafana.ini
              name: config
              subPath: grafana.ini

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "768Mi"
