monitor/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana

spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: grafana
