monitor/grafana/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana

spec:
  entryPoints:
    - websecure
  tls:
    secretName: grafana-tls
  routes:
    - kind: Rule
      match: Host(`monitor.trap.jp`)
      services:
        - namespace: monitor
          kind: Service
          name: grafana
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
    - kind: Rule
      match: Host(`monitor.trap.jp`) && PathPrefix(`/login`)
      middlewares:
        - name: auth-trap-jp-admin
          namespace: auth
        - name: auth-trap-jp
          namespace: auth
      services:
        - namespace: monitor
          kind: Service
          name: grafana
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
